# ulink-deeplearningclub-handouts

./: .buildinfo  .editorconfig  .gitignore  CourseRedesignPlan.md  DetailedLessonOutlines.md  HTML_Organization_Guide.md  ImplementationTimeline.md  README.md  build_docs.py  compile.py  genindex.html  index.html  main.py  migration-guide.md  objects.inv  postscript.html  preface.html  pyproject.toml  search.html  searchindex.js  sphinx-md-guide.md
Common/: DocumentBaseFormat.tex  DocumentTheme.tex  HeaderPackages.tex  WebpageHeader.tex
L2-ComputationalGraph-BackPropagation-GradientDescent/: compile.sh  presentation.tex
L4-MNIST/: compile.sh  mnist.tex
L5-UNet/: ILLUSTRATIONS.md  document.tex.bak
L6-AttentionMechanisms/: document.tex
L7-PyTorch-Basics/: document.tex
L8-CNN-AblationStudy/: appendix_template.tex  document.tex
Viewer/: README.md  dist.old  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
_sources/: index.md  index.md.txt  postscript.md  preface.md  preface.md.txt
_static/: documentation_options.js  pygments.css  style-fixes.css
appendix/: index.html
assets/: index-24a663f8.js  index-760314bc.js  index-ebb8fc16.css
attention-mechanisms/: attn-math.html  cbam.html  channel-spatial-attm-cmp.html  comparison.html  experiments.html  extensions-variations.html  index.html  introduction.html  practical-guide.html  practice.html  se-net.html  spatial-attn.html  the-end.html
cnn-ablation-study/: experiment-design.html  implementation.html  index.html  introduction.html  the-end.html
cnn-basics/: exp-cmp.html  (+5 more)
(+478 files in other folders)
