[project]
name = "lecture-material"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "requests>=2.32.5",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
    "sphinx-serve>=1.0.1",
    "sphinxcontrib-tikz>=0.4.20",
]
